q1/build/log/idf_py_stderr_output_21718
/home/batch-2/Desktop/RTOS_SHIVAKUMAR_11/q1/main/q1.c: In function 'task_4':
/home/batch-2/Desktop/RTOS_SHIVAKUMAR_11/q1/main/q1.c:47:25: error: expected ';' before '}' token
   47 |             task4_data++
      |                         ^
      |                         ;
   48 |             }
      |             ~            
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/q1.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
